psx: free allocated memory at exit.

Kalen Hall reported that Valgrind detected a memory leak associated
with a multi-threaded program linked against libcap and libpsx.

  https://bugzilla.kernel.org/show_bug.cgi?id=215551

I've been unable to validate this myself with valgrind (likely holding
it wrong), but did explore psx for allocated memory and via fprintf's
convinced myself that this change should pair all calloc()s with a
corresponding free().

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>